third_party/move/move-compiler/tests/move_check/folding/unfoldable_constants_blocks.exp
error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:4:9
  │
4 │         (1: u8) << 8;
  │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:5:9
  │
5 │         (1: u64) << 64;
  │         ^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:6:9
  │
6 │         (1: u128) << 128;
  │         ^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:7:9
  │
7 │         (1: u16) << 16;
  │         ^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
  ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:8:9
  │
8 │         (1: u32) << 32;
  │         ^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:10:9
   │
10 │         (0: u8) >> 8;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:11:9
   │
11 │         (0: u64) >> 64;
   │         ^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:12:9
   │
12 │         (0: u128) >> 128;
   │         ^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:13:9
   │
13 │         (0: u16) >> 16;
   │         ^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:14:9
   │
14 │         (0: u32) >> 32;
   │         ^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:16:9
   │
16 │         (1: u8) / 0;
   │         ^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:17:9
   │
17 │         (1: u64) / 0;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:18:9
   │
18 │         (1: u128) / 0;
   │         ^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:19:9
   │
19 │         (1: u16) / 0;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:20:9
   │
20 │         (1: u32) / 0;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:21:9
   │
21 │         (1: u256) / 0;
   │         ^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:23:9
   │
23 │         (1: u8) % 0;
   │         ^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:24:9
   │
24 │         (1: u64) % 0;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:25:9
   │
25 │         (1: u128) % 0;
   │         ^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:26:9
   │
26 │         (1: u16) % 0;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:27:9
   │
27 │         (1: u32) % 0;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:28:9
   │
28 │         (1: u256) % 0;
   │         ^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:30:9
   │
30 │         (255: u8) + 255;
   │         ^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:31:9
   │
31 │         (18446744073709551615: u64) + 18446744073709551615;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:32:9
   │
32 │         (340282366920938463463374607431768211450: u128) + 340282366920938463463374607431768211450;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:33:9
   │
33 │         (65535: u16) + 65535;
   │         ^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:34:9
   │
34 │         (4294967295: u32) + 4294967295;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:35:9
   │
35 │         (115792089237316195423570985008687907853269984665640564039457584007913129639935: u256) + 115792089237316195423570985008687907853269984665640564039457584007913129639935;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:37:9
   │
37 │         (0: u8) - 1;
   │         ^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:38:9
   │
38 │         (0: u64) - 1;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:39:9
   │
39 │         (0: u128) - 1;
   │         ^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:40:9
   │
40 │         (0: u16) - 1;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:41:9
   │
41 │         (0: u32) - 1;
   │         ^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:42:9
   │
42 │         (0: u256) - 1;
   │         ^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:44:9
   │
44 │         ((256: u64) as u8);
   │         ^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:45:9
   │
45 │         ((340282366920938463463374607431768211450: u128) as u64);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:46:9
   │
46 │         ((340282366920938463463374607431768211456: u256) as u128);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:47:9
   │
47 │         ((65536: u64) as u16);
   │         ^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_check/folding/unfoldable_constants_blocks.move:48:9
   │
48 │         ((4294967296: u128) as u32);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

